# IPM

./: .gitignore
soft/remote_ctrl/: CMakeLists.txt  README
soft/remote_ctrl/3dparty/: CMakeLists.txt
soft/remote_ctrl/3dparty/lua-5.1.5/: CMakeLists.txt
soft/remote_ctrl/3dparty/luabitop-1.0.2/: CMakeLists.txt
soft/remote_ctrl/3dparty/qextserialport/: CMakeLists.txt
soft/remote_ctrl/3dparty/qtlua-1.4/: CMakeLists.txt
soft/remote_ctrl/app_client/: CMakeLists.txt
soft/remote_ctrl/app_client/etc/: video.ini
soft/remote_ctrl/app_client/src/: camera_wnd.cpp  camera_wnd.h  main.cpp  main_wnd.cpp  main_wnd.h  main_wnd.ui  valve_tst.cpp  valve_tst.h
soft/remote_ctrl/app_client/src_lua/: client.lua  joystick.lua  manipulator.lua  movement50.lua  spinning.lua
soft/remote_ctrl/app_host/: CMakeLists.txt
soft/remote_ctrl/app_host/src/: main.cpp
soft/remote_ctrl/app_host/src_lua/: bmsd.lua  escon.lua  host.lua  lsm303.lua
soft/remote_ctrl/joyctrl/: CMakeLists.txt
soft/remote_ctrl/joyctrl_top/: CMakeLists.txt
soft/remote_ctrl/luajoyctrl/: CMakeLists.txt
soft/remote_ctrl/luamcuctrl/: CMakeLists.txt
soft/remote_ctrl/mcuctrl/: CMakeLists.txt
soft/remote_ctrl/mcuctrl/src/: emul_usb_io.cpp  emul_usb_io.h  mcu_ctrl.h
soft/remote_ctrl/peer_abst/: CMakeLists.txt
soft/remote_ctrl/peer_qxmpp/: CMakeLists.txt
soft/remote_ctrl/peer_qxmpp/src/: host_qxmpp.cpp
soft/remote_ctrl/tests/: CMakeLists.txt
